# AsynchronousFunction

./: .gitignore  CLAUDE.md  CLAUDE_BACKUP.md  README.md  pyproject.toml
.claude/agent-memory/paper-reviewer/: MEMORY.md  (+1 more)
.claude/agents/: paper-reviewer.md  scholarly-writer.md
Manuscript/: main.tex  references.bib
configs/: ave.yaml  cremad.yaml  kinetics_sounds.yaml  mosei.yaml  mosi.yaml
docs/: ASGML-approach-and-trajectory.md  RelatedWorks.md
docs/experiments/: credibility_audit.md  experiment_results.md  phase1_probe_analysis.md  phase1_results.md
docs/plans/: 2026-02-01-ASGML-design.md  2026-02-25-ASGML-design-v2.md
paper/: main.tex  neurips_2026.sty  references.bib
paper/sections/: analysis.tex  appendix_experiments.tex  appendix_theory.tex  conclusion.tex  experiments.tex  introduction.tex  method.tex  related_work.tex
scripts/: aggregate_sweep.py  download_kinetics_sounds.py  extract_ave_frames.sh  extract_cremad_frames.sh  extract_kinetics_frames.sh  extract_ks_frames_audio.sh  prepare_ave.py  prepare_datasets.sh  prepare_mosei.py  sweep_ave.sh  sweep_baselines_3f.sh  sweep_brats.sh  sweep_brats_phase2.sh  sweep_cggm.sh  sweep_continuous.sh  sweep_cremad.sh  sweep_cremad_opm.sh  sweep_ks.sh  sweep_mosei.sh  sweep_mosi.sh  sweep_staleness.sh  train.py  train_brats.py
src/: __init__.py
src/datasets/: __init__.py  ave.py  cmu_mosi.py  cremad.py  kinetics_sounds.py  mosei.py
src/losses/: __init__.py  asgml.py  cggm.py
src/models/: __init__.py  encoders.py  fusion.py  multimodal.py  probes.py
src/utils/: __init__.py  logging.py  metrics.py
(+1 files in other folders)
